menu page top spacing fix

--- a/src/assets/less/menu.less
+++ b/src/assets/less/menu.less
@@ -315,7 +315,7 @@
       overflow: initial;
     }
     #cs-menu-group {
-      padding-top: clamp(10rem, 18vw, 8rem);
+      padding-top: clamp(10rem, 18vw, 8rem) !important;
       text-align: center;
       height: auto;
       padding: var(--sectionPadding);
